--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,60 @@
     justify-content: center;
     text-align: center;
 }
+#nav-div{
+    margin-bottom: 10%;
+}
 
 .nav{
     justify-content: center;
     text-align: center;
     display: flex;
+    list-style: none;
+    font-family:Arial, Helvetica, sans-serif; 
+        
 }
+.nav li{
+    position: relative;
+    background-color: rgba(186,186,155,0.51);
+    
+    
+}
+.nav ul {
+    position: absolute;
+    display:none ;  
+      
+    
+}
+.nav ul li {
+    display: block;
+}
+.nav li:hover ul{
+    display: block;
+}
+
+.nav li a{
+    padding: 15px;
+    text-decoration: none;
+    display: block;
+}
+.nav li a:hover {
+    background-color: darkgrey;
+}
+
+#submenu{
+    list-style: none;
+    position: absolute;   
+}
+#submenu li a{
+    padding: 5px;
+}
+
+#submenu li:hover{
+    background-color: darkgrey;
+    cursor: pointer;    
+    z-index: 1;
+}
+
 
 #img-banner{
     display: flex;
@@ -26,6 +74,7 @@
     color: white;
     padding: 10px;
     border-radius: 5px;
+    /*texto*/
     font-size: large;
     box-shadow: 5px 5px 5px 0px rgba(186,186,155,0.51);
     -webkit-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
@@ -88,6 +137,7 @@
     left: 25%;
 }
 
+/*Tipografía de Google fonts */
 .h2-style{
     font-size: 35px;
     text-align: center;   
@@ -104,13 +154,19 @@ table{
     height: 360px;
     
 }
+
 .table-b, th, td{
     border-style: solid;
     
     height: 60px;
     font-family: 'Inter', sans-serif;
 }
+/*Estilo de lista */
+.list{
+    list-style-type: upper-roman;
+}
 
+/*Background color en Footer*/
 footer{
     background-color: rgb(82, 202, 82);
     height: 15vh;
