--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+*{    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .logo-h{
     justify-content: center;
     text-align: center;
@@ -6,37 +12,45 @@
     margin-bottom: 10%;
 }
 
+body{
+    text-align: center;
+}
+
 .nav{
     justify-content: center;
     text-align: center;
     display: flex;
     list-style: none;
-    font-family:Arial, Helvetica, sans-serif; 
-        
+    font-family: 'Bebas Neue',cursive; 
+    font-size: 30px;
+   
 }
+
 .nav li{
     position: relative;
-    background-color: rgba(186,186,155,0.51);
-    
-    
+    background-color: rgba(192, 192, 113, 0.51);   
+    z-index: 1;   
 }
+
 .nav ul {
     position: absolute;
     display:none ;  
       
-    
 }
+
 .nav ul li {
     display: block;
 }
+
 .nav li:hover ul{
     display: block;
 }
 
 .nav li a{
-    padding: 15px;
+    padding: 25px;
     text-decoration: none;
     display: block;
+    color: white
 }
 .nav li a:hover {
     background-color: darkgrey;
@@ -47,7 +61,7 @@
     position: absolute;   
 }
 #submenu li a{
-    padding: 5px;
+    padding: 10px;
 }
 
 #submenu li:hover{
@@ -56,19 +70,24 @@
     z-index: 1;
 }
 
-
-#img-banner{
+.img-banner{
     display: flex;
     position: relative;
     left: 25%;
+    width: 50%;
 }
+
 #banner-pedido{
-    margin-bottom: 10%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+.hacer-pedidoDiv{
+    display: flex;
+    justify-content: center;
 }
 
 #button-pedido{
-    position: relative;
-    left: 42%;
     margin: 3%;
     background-color: rgb(82, 202, 82);
     color: white;
@@ -80,22 +99,28 @@
     -webkit-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
     -moz-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
 }
+#button-pedido:hover{
+    cursor: pointer;
+}
+
+/*Estilo de Seccion Nosotros*/
 
 .section-us{
     display: flex;
     margin: 5%;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
 }
 
 .p-us{
     margin: 5%;    
     font-size: 20px;
+    font-family:'Urbanist', sans-serif;
 }
 
 #h-us{
     font-size: 35px;    
     text-align: center;
-    font-family: 'Lobster', cursive;
+    font-family: 'Bebas Neue',cursive; 
 }
 
 #h-serv{
@@ -103,46 +128,96 @@
     margin: 3%;
     font-size: 35px;
     padding-left: 20%;   
-    font-family: 'Lobster', cursive;
+    font-family: 'Bebas Neue',cursive; 
 }
 
-.section-serv{
+/*Estilo de Seccion Servicios*/
+
+.sectionServ{
     display: flex;
     margin: 3%;
     margin-bottom: 15%;
 }
 
+/*Estilo de seccion Planes*/
+
 #planes-h{
-    margin: 3%;
     font-size: 35px;
     text-align: center;   
-    font-family: 'Lobster', cursive;
+    font-family: 'Bebas Neue',cursive; 
 }
 
-#planes-img{
+.planTitle{
+    font-family: 'Bebas Neue',cursive;
+    text-align: center;
+}
+
+#planesImg{
     display: flex;
     flex-direction: row;
-}
+    }
 
 .img-plan{
     margin: 30px;
 }
 
-#form-contact{
-    display: table-caption;
+
+    
+
+/*Estilo Pancakes*/
+
+.pancake-div{
+    display: grid;
+    justify-content: center;
 }
 
-#video-prueba{
-    position: relative;
-    left: 25%;
+
+/*Estilo de Contacto*/
+
+.contacto-imagen{
+    background-image: url(../images/mesada.jpg);
+    background-size: cover;
+    margin: 5%;
+
 }
+
+.seccionContacto{
+    display:flex ;
+    flex-direction: column;
+    margin: 5%
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: 5%
+}
+
+/*Incluye text-align-last - flex-direction: column */
+
+#formContact{
+    flex-direction: column;
+    padding: 5%;
+    position: relative;
+    left: 35%;
+    margin-bottom: 5%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    width: 40%;
+    line-height:2rem;
+    text-align-last: right;
+}
+
+
 
 /*Tipografía de Google fonts */
 .h2-style{
-    font-size: 35px;
+    font-size: 40px;
     text-align: center;   
-    font-family: 'Lobster', cursive;
+    font-family: 'Bebas Neue',cursive; 
 }
+
+/*Ejercicio de tablas*/
 
 table{
     display: flex;
@@ -172,4 +247,149 @@ footer{
     height: 15vh;
     text-align: center;
     padding: 10px;
+}
+
+#clear{
+    background-color: rgb(212, 84, 84);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    /*texto*/
+    font-size: large;
+    box-shadow: 5px 5px 5px 0px rgba(186,186,155,0.51);
+    -webkit-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
+    -moz-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
+}
+
+#enviar{
+    background-color: rgb(82, 202, 82);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    /*texto*/
+    font-size: large;
+    box-shadow: 5px 5px 5px 0px rgba(186,186,155,0.51);
+    -webkit-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
+    -moz-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
+}
+.button-pedidoPlan{
+    background-color: rgb(82, 202, 82);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    /*texto*/
+    font-size: large;
+    box-shadow: 5px 5px 5px 0px rgba(186,186,155,0.51);
+    -webkit-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
+    -moz-box-shadow: 6px 7px 5px 0px rgba(186,186,155,0.51);
+    
+}
+
+.button-pedidoPlan:hover{
+    cursor: pointer;
+}
+
+/*Display Flex - Flex direction*/
+#imgFooter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.img-foot{
+    width: 50px;
+}
+
+footer{
+    height: 20%;
+}
+
+/*Ejemplo de uso de Grid-->*/
+
+.grid-layout{
+    background-color: grey;    
+    display: grid; 
+    grid-template-columns: auto auto;       
+    justify-content: center;
+    grid-row-gap: 2px;
+    
+}
+
+
+.caja{
+    width: 150px;
+    
+    border: 4px solid black;
+    background-color: rgb(82, 202, 82);
+    margin: 10px;
+    text-align: center;
+    line-height: 150px
+}
+
+
+
+/*        Media queries       */
+
+/*Background color del nav cambia en dispositivos menores a 768px */
+/*
+@media only screen and (min-width: 768px){
+    .nav{
+        background-color: rgba(186,186,155,0.51); 
+    }
+}
+
+@media only screen and (max-width: 767px){
+    .nav{
+        background-color:none 
+    }
+}
+*/
+/*Background color de la seccion para tablet con un mac 768px*/
+/*
+    @media only screen and (max-width: 768px){
+    #servicio-seccion{
+        max-width: 768px;
+        background-color: grey;
+            }
+    }
+*/
+
+#cont-1{
+    background-image: url("../images/getStronger.jpg");
+}
+#img-fitPoster{
+    height: 100vh;
+    
+}
+
+.banner{
+    height: 200px;
+    margin: 3% 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Nautilus pompilius',cursive;
+    font-size:100px;
+    color: white;
+    background-image: linear-gradient(
+        to bottom right,
+        #4affde 0%, #5b9dff 40%, #d06bff 60%, #ff34d2 100%
+    );
+    background-size: 200% 200%;
+    animation: movingGradient 5s linear infinite alternate;
+}
+@keyframes movingGradient {
+    from { background-position: 0 0}
+    to   { background-position: 100% 100%}
+}
+
+#div-logo{
+    transform: rotate(180deg);
+    justify-content: center;
+    display: flex;
+}
+#logo-transform{
+    transform: scale(2,1);
+    width: 20%;
+    height: 20%;
 }
