se comprimen imagenes

--- a/views/fit.html
+++ b/views/fit.html
@@ -104,7 +104,7 @@
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="5000">
-                <img src="../images/beast.jpg" class="d-block w-50 h-50 rounded mx-auto d-block img-fluid" alt="...">
+                <img src="../images/beast-min-1.jpg" class="d-block w-50 h-50 rounded mx-auto d-block img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
@@ -131,7 +131,7 @@
     <!--Seccion de Nosotros e historia-->
 
     <div class="container-md d-flex justify-content-center" >
-        <img src="../images/getStronger.jpg" class="img-fluid" id="img-fitPoster">
+        <img src="../images/getStronger-min.jpg" class="img-fluid" id="img-fitPoster">
     </div>
     <!--Seccion de Servicios-->
 
@@ -146,7 +146,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
             </p>
-            <img src="../images/Copia de Greyscale Photo Fitness Gym Poster.jpg" style="width: 450px;">
+            <img src="../images/Copia de Greyscale Photo Fitness Gym Poster-min.jpg" style="width: 450px;">
         </div>
     </section>
 
@@ -160,23 +160,23 @@
         <div id="planesImg">
             <div class="img-plan">
                 <h3 class="planTitle">Fit</h3>
-                <img src="../images/menuFit.jpg" width="300px" margin="10px">
+                <img src="../images/menuFit-min.jpg" width="300px" margin="10px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             
             <div class="img-plan">
                 <h3 class="planTitle">Keto</h3>
-                <img src="../images/menufit2.jpg" width="300px">
+                <img src="../images/menufit2-min.jpg" width="300px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Bajas calorías</h3>
-                <img src="../images/menufit3.jpg" width="300px">
+                <img src="../images/menufit3-min.jpg" width="300px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Gourmet</h3>
-                <img src="../images/menufit4.jpg" width="300px" height= "424px">
+                <img src="../images/menufit4-min.jpg" width="300px" height= "424px">
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
         </div>
