--- a/views/fit.html
+++ b/views/fit.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-light bg-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="../images/logo.jpg" height="100px"></a>
+          <a class="navbar-brand" href="/index.html"><img src="../images/logo.jpg" height="100px"></a>
           <button class="navbar-toggler bg-dark " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon btn btn-close-white"></span>
           </button>
