--- a/views/fit.html
+++ b/views/fit.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viandas Saludables</title>
+    <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
+    <title>Deli Rose Viandas - Fit</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
 </head>
 
 <body>
@@ -37,10 +38,10 @@
             <li>
                 <a href="planes.html">Planes</a>
                 <ul id="submenu">
-                    <li><a href="views/fit.html">Fit Plan</a></li>
-                    <li><a href="views/keto.html">Keto</a></li>
-                    <li><a href="#">Bajas calorias</a></li>
-                    <li><a href="#">Gourmet</a></li>
+                    <li><a href="fit.html">Fit Plan</a></li>
+                    <li><a href="keto.html">Keto</a></li>
+                    <li><a href="bc.html">Bajas calorias</a></li>
+                    <li><a href="gourmet.html">Gourmet</a></li>
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
