--- a/views/bc.html
+++ b/views/bc.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
-    <title>Deli Rose Viandas</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Deli Rose Viandas - Gourmet</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -34,13 +34,13 @@
 
     <nav id="nav-div">
         <ul class="nav">
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="planes.html">Planes</a>
                 <ul id="submenu">
-                    <li><a href="views/fit.html">Fit Plan</a></li>
-                    <li><a href="views/keto.html">Keto</a></li>
-                    <li><a href="#">Bajas calorias</a></li>
-                    <li><a href="#">Gourmet</a></li>
+                    <li><a href="fit.html">Fit Plan</a></li>
+                    <li><a href="keto.html">Keto</a></li>
+                    <li><a href="bc.html">Bajas calorias</a></li>
+                    <li><a href="gourmet.html">Gourmet</a></li>
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
