--- a/views/keto.html
+++ b/views/keto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viandas Saludables</title>
+    <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
+    <title>Deli Rose Viandas - Keto</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <meta name="viewport" content="with=device-width, initial-scale=1.0"/>
+    
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
 
     <nav class="navbar navbar-light bg-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="../images/logo.jpg" height="100px"></a>
+          <a class="navbar-brand" href="../index.html"><img src="../images/logo.jpg" height="100px"></a>
           <button class="navbar-toggler bg-dark " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon btn btn-close-white"></span>
           </button>
@@ -76,10 +77,10 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="planes.html">Planes</a>
                 <ul id="submenu">
-                    <li><a href="#">Fit Plan</a></li>
-                    <li><a href="#">Keto</a></li>
-                    <li><a href="#">Bajas calorias</a></li>
-                    <li><a href="#">Gourmet</a></li>
+                    <li><a href="fit.html">Fit Plan</a></li>
+                    <li><a href="keto.html">Keto</a></li>
+                    <li><a href="bc.html">Bajas calorias</a></li>
+                    <li><a href="gourmet.html">Gourmet</a></li>
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
