--- a/views/fit.html
+++ b/views/fit.html
@@ -24,10 +24,10 @@
 
 <body>
     <header>
-        <!-- <div class="logo-h">
+        <div class="logo-h">
         <img src="../images/logo.jpg" height="100px">
-        
-        </div>-->
+        <h1 style="font-family: 'Lobster', cursive;">Viandas Saludables</h1>
+        </div>
     </header>
 
     <!--Menú Navegable-->
@@ -50,24 +50,6 @@
         </ul>
     </nav>
 
-    <!--
-    <nav id="nav-div">
-        <ul class="nav">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="planes.html">Planes</a>
-                <ul id="submenu">
-                    <li><a href="#">Fit Plan</a></li>
-                    <li><a href="#">Keto</a></li>
-                    <li><a href="#">Bajas calorias</a></li>
-                    <li><a href="#">Gourmet</a></li>
-                </ul>
-            </li>
-            <li><a href="#servicio-seccion">Servicios</a></li>
-            <li><a href="#h-us">Nosotros</a></li>
-            <li><a href="#contacto-formulario">Contacto</a></li>
-        </ul>
-    </nav>
-    -->
     <!--Banner y botón para hacer pedido-->
 
     <div id="banner-pedido">
@@ -157,23 +139,23 @@
 
         <div id="planesImg">
             <div class="img-plan">
-                <h3 class="planTitle">Fit</h3>
+                <h3 class="planTitle">Fit - Semana 1</h3>
                 <img src="../images/menuFit-min.jpg" width="300px" margin="10px" />
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
 
             <div class="img-plan">
-                <h3 class="planTitle">Keto</h3>
+                <h3 class="planTitle">Fit - Semana 2</h3>
                 <img src="../images/menufit2-min.jpg" width="300px" />
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             <div class="img-plan">
-                <h3 class="planTitle">Bajas calorías</h3>
+                <h3 class="planTitle">Fit - Semana 3</h3>
                 <img src="../images/menufit3-min.jpg" width="300px" />
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
             <div class="img-plan">
-                <h3 class="planTitle">Gourmet</h3>
+                <h3 class="planTitle">Fit - Semana 4</h3>
                 <img src="../images/menufit4-min.jpg" width="300px" height="424px" />
                 <button class="button-pedidoPlan">Hacer Pedido</button>
             </div>
