estilo en vistas

--- a/views/bc.html
+++ b/views/bc.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
-    <title>Deli Rose Viandas - Gourmet</title>
+    <meta name="description" content="Ahora cuidarte es más fácil, rápido y delicioso! Deli Rose se encarga de brindarte el plato que necesitás, cuando lo querés y más rico que nunca. Podés elegir el plan que más se adapte a tus objetivos y comenzar a cuidar tu alimentación para acercarte más a tus metas.">
+    <title>Viandas - Bajas calorías</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
