--- a/views/fit.html
+++ b/views/fit.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
-    <title>Deli Rose Viandas - Fit</title>
+    <meta name="description" content="Ahora cuidarte es más fácil, rápido y delicioso! Deli Rose se encarga de brindarte el plato que necesitás, cuando lo querés y más rico que nunca. Podés elegir el plan que más se adapte a tus objetivos y comenzar a cuidar tu alimentación para acercarte más a tus metas.">
+    <title>Viandas - Fit</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -165,7 +166,7 @@
         <h2 class="h2-style" style="text-align: center; font-size: 30px">
             Pancakes Proteicos
         </h2>
-        <img src="../images/pancakesPRO.jpg" />
+        <img src="../images/pancakesPRO.jpg" height="500vh" />
         <h3>Pancakes elaborados a base de clara de huevo y proteína en polvo</h3>
     </div>
 
