--- a/views/keto.html
+++ b/views/keto.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
-    <title>Deli Rose Viandas - Keto</title>
+    <meta name="description" content="Ahora cuidarte es más fácil, rápido y delicioso! Deli Rose se encarga de brindarte el plato que necesitás, cuando lo querés y más rico que nunca. Podés elegir el plan que más se adapte a tus objetivos y comenzar a cuidar tu alimentación para acercarte más a tus metas.">
+    <title>Viandas - Keto</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,8 +87,13 @@
           <button id="button-pedido">Hacer Pedido</button>
         </div>
     </div>
-    
-    <!--Seccion de Nosotros e historia-->
+
+    <!--Seccion de banner-->
+    <section>
+      <div class="banner">
+          <p>Deli Rose</p>
+      </div>
+    </section>    
 
     <div class="container-md d-flex justify-content-center" >
         <img src="../images/Dont worry, be happy!-min.jpg" class="img-fluid" id="img-fitPoster">
